--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-grid-system": "^2.9.2",
+    "react-materialize": "^1.0.3",
     "react-multi-dropdown": "^1.0.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1"
