--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-materialize": "^1.0.3",
     "react-multi-dropdown": "^1.0.1",
     "react-router-dom": "^4.1.1",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "universal-cookie": "^2.0.8"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
