--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-multi-dropdown": "^1.0.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "react-toggle-display": "^2.2.0",
     "universal-cookie": "^2.0.8"
   },
   "devDependencies": {
