--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-grid-system": "^2.9.2",
     "react-materialize": "^1.0.3",
     "react-multi-dropdown": "^1.0.1",
+    "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "universal-cookie": "^2.0.8"
