--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chart.js": "^2.6.0",
     "material-ui": "^0.18.3",
     "react": "^15.6.1",
+    "react-chartjs-2": "^2.1.0",
     "react-cookie": "^2.0.7",
     "react-dom": "^15.6.1",
     "react-grid-system": "^2.9.2",
