--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chart.js": "^2.6.0",
+    "jquery": "^3.2.1",
     "material-ui": "^0.18.3",
     "react": "^15.6.1",
     "react-chartjs-2": "^2.1.0",
